# recruiter-mailer

./: .env.example  .gitignore  pyproject.toml
src/recruiter-mailer/: main.py
src/recruiter_mailer/: main.py
templates/: message.txt
