[project]
name = "recruiter-mailer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
recruiter-mailer= "recruiter_mailer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["src/recruiter_mailer"]